# financial-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  169f0923505f_add_canvas_positions_and_goal_.py  6c5ff0f03528_add_channel_funding_source.py  70eb279d1034_add_goal_contributions_and_canvas_.py  8ff13437c567_add_goal_channel_and_round_up.py  a0df57eef953_add_users_table_and_user_id_ownership_.py  bafc51ed3cb6_remove_channel_funding_source.py  c1a2b3d4e5f6_add_asset_channel.py  d2b3c4e5f6a7_add_channel_type.py  e3f4a5b6c7d8_add_channel_logo.py  f4a5b6c7d8e9_add_channel_badge_label.py
app/: auth.py  config.py  crud.py  database.py  main.py  manage_users.py  models.py  schemas.py  seed.py
app/routers/: assets.py  auth.py  cashflow.py  channels.py  credit.py  expenses.py  goal_contributions.py  goals.py  overview.py  payout_periods.py  transfers.py
app/static/css/: input.css
app/static/js/: cashflow.js
app/templates/: assets.html  base.html  cashflow.html  credit.html  expenses.html  goals.html  login.html  macros.html  overview.html  placeholder.html
app/templates/partials/: assets_page.html  cashflow_page.html  credit_page.html  (+3 more)
tests/: conftest.py  test_assets.py  test_auth.py  test_cashflow.py  test_channels.py  test_credit.py  test_expenses.py  test_goal_contributions.py  test_goals.py  test_navigation.py  test_overview.py  test_payout_periods.py  test_seed.py  test_transfers.py
