[project]
name = "finance-tracker"
version = "1.5.0"
description = "Personal finance tracker (FastAPI + HTMX + Postgres)"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn[standard] (==0.30.6)",
    "sqlalchemy (==2.0.51)",
    "psycopg2-binary (==2.9.12)",
    "alembic (==1.13.2)",
    "jinja2 (==3.1.4)",
    "python-multipart (==0.0.9)",
    "pydantic-settings (==2.5.2)",
    "bcrypt (==4.2.0)",
    "itsdangerous (==2.2.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.11.2"
djlint = "^1.34.1"
pytest = "^8.3.3"
httpx = "^0.27.2"
types-psycopg2 = "^2.9.21"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Form", "fastapi.File"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[tool.djlint]
profile = "jinja"
indent = 2
extension = "html"
ignore = "H030,H031"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
